# sokudo

./: CMakeLists.txt
src/: CMakeLists.txt  common.h  errors.h  kernel.cpp  kernel.h  kernel_enums.h  sokudo.cpp  sokudo.h  task.h  types.h
src/kernels/: add_test.cpp  add_test.h
src/kernels/blas/: blas.h
src/kernels/blas/level1/: add.h  amax.cpp  amax.h  amin.cpp  amin.h  asum.cpp  asum.h  axpy.cpp  axpy.h  blas_level1.h
src/kernels/math/: add.h
src/sokudo_cuda/: CMakeLists.txt  cuda_helper.cu  cuda_helper.h  cuda_test.cu  cuda_test.h
src/sokudo_cuda/blas/level1/: add.h  amax.cu  amax.h  amin.cu  amin.h  asum.cu  asum.h  axpy.cu  axpy.h
src/sokudo_opencl/: CMakeLists.txt  cl_helper.cpp  cl_helper.h  cl_test.cl  cl_test.cpp  cl_test.h
src/sokudo_opencl/blas/level1/: add.cpp  add.h  add_i64.cl  amax.cl  amax.cpp  amax.h  amin.cl  amin.cpp  amin.h  asum.cl  asum.cpp  asum.h  axpy.cl  axpy.cpp  axpy.h  dasum.cl  sasum.cl  scasum.cl
tests/: CMakeLists.txt  blas_level1.cpp  debug.cpp  task_group.cpp
